<resources>
    <string name="app_name">PrivatChat</string>
    <string name="login"><i>Введите логин</i></string>
    <string name="password"><i>Введите пароль</i></string>
    <string name="search">Войти</string>
    <string name="result">Тут будет результат</string>
    <string name="url">https://script.google.com/macros/s/AKfycbxf5uQqkmhUobuzSo6cNZrFBWkqyq_bcpDtBmjTJvtr9fy8ZA/exec</string>

    <string name="error_message">Ошибка! Попробуйте ещё раз.</string>
    <string name="title">PrivatChat</string>
</resources>
